--- a/public/style.css
+++ b/public/style.css
@@ -10,6 +10,12 @@ label {
   display: block;
 }
 
+nav {
+  background-color: rgb(143, 181, 143);
+  display: flex;
+  justify-content: space-around;
+}
+
 nav a {
   display: inline-block;
   margin: 1em;
@@ -18,4 +24,8 @@ nav a {
 form div {
   margin: 1em;
   display: inline-block;
+}
+img {
+  height: 300px;
+  width: auto;
 }
