--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 #app {
-  background-color: #999999;
+  background-color: #535353;
   min-height: 100vh;
 }
 
@@ -20,9 +20,12 @@ img {
   width: 100%;
   height: auto;
 }
+.offset {
+  padding-top: 60px;
+}
 /*--- TEXT ---*/
 p {
-  color: #2f0601;
+  color: #000000;
   margin: 0px;
 }
 a {
@@ -48,9 +51,12 @@ h4 {
 .header {
   justify-content: space-between;
   background-color: rgb(143, 181, 143);
-  width: auto;
+  width: calc(100vw - 100px);
   padding: 10px 50px;
   align-items: center;
+  position: fixed;
+  z-index: 10;
+  top: 0px;
 }
 nav a {
   padding: 0px 25px;
@@ -65,6 +71,7 @@ nav a {
   width: 100%;
   max-width: 200px;
   text-align: center;
+  cursor: pointer;
 }
 
 /*--- Home ---*/
@@ -73,6 +80,7 @@ nav a {
   height: 500px;
   background-size: cover;
   background-position: center center;
+  display: none;
 }
 .welcome {
   text-transform: capitalize;
@@ -82,13 +90,24 @@ nav a {
   font-weight: 100;
 }
 .intro {
-  height: 40vh;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: calc(100vh - 50px);
+  z-index: -1;
+  background-size: cover;
+  background-position: center center;
+}
+.home .info {
+  z-index: 10;
+  text-align: center;
+  color: #ffffff;
+}
+.home .info .btn {
+  margin: 0 auto;
 }
 .home h2,
-h4 {
+.home h4 {
   padding: 0px 0px 20px 0px;
 }
 .home h4 {
@@ -96,16 +115,31 @@ h4 {
   text-align: center;
   font-weight: 200;
 }
+.home .intro .overlay {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  opacity: 0.7;
+  z-index: 1;
+}
 
 /*--- ALL PRODUCTS ----*/
 .flex {
   display: flex;
 }
-
 .all-products {
+  padding: 75px 10px;
+}
+.all-products h2 {
+  color: #000000;
+  text-align: center;
+}
+.all-products .flex {
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 10px;
   contain: content;
 }
 
@@ -136,9 +170,176 @@ h4 {
   display: flex;
   justify-content: center;
   margin: 50px;
-  border: 50px solid #34403a;
+  border: 10px solid #34403a;
+  background-color: #34403a;
+}
+.single-product .image img {
+  height: 500px;
+  width: auto;
+  max-width: 100%;
 }
 .single-product .info {
   width: 50vw;
   margin: 50px;
+}
+.single-product .info h3,
+.single-product .info p {
+  padding-bottom: 20px;
+}
+.single-product {
+  padding: 100px 50px 50px 50px;
+}
+
+/*--- Auth Forms ---*/
+.auth {
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+.form {
+  flex-direction: column;
+  width: 400px;
+}
+.form div {
+  margin: 10px 0px;
+  width: 100%;
+  contain: content;
+}
+.form input {
+  padding: 10px 10px;
+  width: 100%;
+}
+.form label {
+  font-weight: bold;
+  font-size: 20px;
+}
+.form button {
+  width: 100%;
+  padding: 10px;
+  background-color: #34403a;
+  color: #ffffff;
+  font-weight: bold;
+}
+
+/*--- Cart ---*/
+.cart {
+  width: 95vw;
+  margin: 0 auto;
+  overflow: scroll;
+  padding-bottom: 50px;
+  padding-top: 100px;
+}
+.cart .btn {
+  margin-top: 10px;
+}
+.cart-item {
+  padding: 25px 0px;
+  border-bottom: 1px solid #000000;
+  align-items: center;
+}
+.cart-item img {
+  width: 200px;
+  height: 100px;
+  border: 1px solid;
+}
+.cart-item .info {
+  width: 100%;
+  padding-left: 20px;
+}
+.cart-item h4 {
+  flex: 1;
+  text-transform: capitalize;
+  font-size: 20px;
+  padding: 0px;
+}
+.cart-item .info div {
+  justify-content: space-between;
+  width: 100%;
+  padding: 5px 0px;
+  align-items: center;
+}
+.cart .empty h2 {
+  text-align: center;
+  margin-bottom: 10px;
+}
+.cart .empty .btn {
+  margin: 0 auto;
+}
+.qty-btn {
+  font-size: 30px;
+  font-weight: bold;
+  padding: 0px 20px 0px 0px;
+  cursor: pointer;
+}
+
+/*--- Checkout ---*/
+.checkout {
+  width: 50vw;
+  overflow: scroll;
+  padding: 200px 0px;
+  margin: 0 auto;
+}
+.checkout .btn {
+  margin-top: 10px;
+}
+.checkout-item {
+  padding: 25px 0px;
+  border-bottom: 1px solid #000000;
+  align-items: center;
+}
+.checkout-item h4,
+.checkout-item p {
+  flex: 1;
+  text-transform: capitalize;
+  font-size: 20px;
+  padding: 0px;
+}
+.checkout h3 {
+  padding-top: 25px;
+}
+
+/*--- Media Queries ---*/
+@media screen and (max-width: 1200px) {
+  .checkout.offset {
+    width: 95vw;
+    padding: 200px 10px;
+  }
+}
+
+@media screen and (max-width: 855px) {
+  .offset {
+    padding-top: 100px;
+  }
+  .header {
+    flex-direction: column;
+  }
+  .header h1 {
+    padding-bottom: 10px;
+  }
+  nav a {
+    padding: 0px 10px;
+  }
+}
+
+@media screen and (max-width: 975px) {
+  .all-products .product {
+    width: 40vw;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .all-products .flex {
+    flex-direction: column;
+  }
+  .all-products .product {
+    width: 100%;
+    margin: 10px 0px;
+  }
+  .cart-item {
+    flex-direction: column;
+  }
+  .cart-item .info {
+    padding: 0px;
+  }
 }
