--- a/public/style.css
+++ b/public/style.css
@@ -93,7 +93,7 @@ nav a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: calc(100vh - 50px);
+  height: 100vh;
   z-index: -1;
   background-size: cover;
   background-position: center center;
@@ -224,11 +224,10 @@ nav a {
 
 /*--- Cart ---*/
 .cart {
-  width: 95vw;
   margin: 0 auto;
   overflow: scroll;
-  padding-bottom: 50px;
-  padding-top: 100px;
+  padding: 100px 25px 50px 25px;
+  height: 100vh;
 }
 .cart .btn {
   margin-top: 10px;
@@ -275,9 +274,9 @@ nav a {
 
 /*--- Checkout ---*/
 .checkout {
-  width: 50vw;
+  height: calc(100vh - 100px);
   overflow: scroll;
-  padding: 200px 0px;
+  padding: 100px 50px 0px 50px;
   margin: 0 auto;
 }
 .checkout .btn {
